Update log message alerting rules (#443)
* Update log message alerting rules

Signed-off-by: Apekshit Sharma <apekshit.sharma@hedera.com>

* Change logging level of 'Failed downloading ..' to warn

Signed-off-by: Apekshit Sharma <apekshit.sharma@hedera.com>

* address review comments

Signed-off-by: Apekshit Sharma <apekshit.sharma@hedera.com>